# liquidagent

./: .gitignore  README.md  flake.nix  pyproject.toml  settings.ini  simple_chembl_search.py
notebooks/ipynb/: 01_explore_langchain.ipynb  02_explore_litellm.ipynb  03_explore_ollama.ipynb  04_config_api.ipynb  05_chat_model_api.ipynb  06_ollama_chat_model_api.ipynb  07_utils.ipynb  08_explore_liquid_agent.ipynb
notebooks/pypct/: 01_explore_langchain.py  02_explore_litellm.py  03_explore_ollama.py  04_config_api.py  05_chat_model_api.py  06_ollama_chat_model_api.py  07_utils.py  08_explore_liquid_agent.py
src/liquidagent/: __init__.py  _modidx.py  cli.py  config.py  main.py  prompts.py  utils.py
src/liquidagent/chat_model/: anthropic.py  base.py  ollama.py  openai.py
src/liquidagent/tools/: fuzzy_id_search.py  simple_chembl_search.py  surechembl_search.py  uspto_search.py
