[project]
name = "liquidagent"
version = "0.1.0"
description = "Liquid Agent"
readme = "README.md"
authors = [
    { name = "Ankur Kumar", email = "ank@leoank.me" }
]
requires-python = ">=3.11"
dependencies = [
  "polars",
  "litellm",
  "ollama",
  "langchain",
  "langchain-litellm",
  "langchain-ollama",
  "langchain-community",
  "langgraph",
  "aiohttp>=3.9.0",
  "ollama",
]

[project.optional-dependencies]
cpu = [
  "torch",
  "torchvision",
]
cu124 = [
  "torch",
  "torchvision",
]
dev = [
  "pytest",
  "ruff",
  "build",
  "twine",
  "jupytext",
  "ipython",
  "jupyterlab",
  "jupyterlab-quarto",
  "jupyter-collaboration",
  "jupyterlab-horizon-theme",
  "nbdev"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.scripts]
biomimir = "liquidagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nbdotrun>=0.1.1",
]

[tool.jupytext.formats]
"notebooks/ipynb" = "ipynb"
"notebooks/pypct" = "py:percent"
